# iProverModulo

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.in  README.md  ReadMe  configure  configure.ac  delinkify.sh  iProverModulo---0.7-0.3.html
E/: Makefile.vars
E/ANALYSIS/: Makefile.dependencies
E/BASICS/: Makefile.dependencies
E/CLAUSES/: Makefile.dependencies
E/CONTROL/: Makefile.dependencies
E/HEURISTICS/: Makefile.dependencies
E/INOUT/: Makefile.dependencies
E/LEARN/: Makefile.dependencies
E/ORDERINGS/: Makefile.dependencies
E/PCL2/: Makefile.dependencies
E/PROPOSITIONAL/: Makefile.dependencies
E/PROVER/: Makefile.dependencies  eprover.c
E/SIMPLE_APPS/: Makefile.dependencies
E/TERMS/: Makefile.dependencies
E/TEST/: Makefile.dependencies
autotheo/: .depend  Makefile  Makefile.in  cnf.ml  cnf.mli  debug.ml  globals.ml  globals.ml.in  lexer_tptp.mll  lib.ml  lib.mli  main.ml  parse_files.ml  parse_files.mli  parser_tptp.mly  parser_types.ml  parser_types.mli  rules.ml  saturate.ml  saturate.mli
iprover_v0.7_patched/: FOL.dk  Makefile  Makefile.in  Makefile.in~  README  basic_resolution_options  depend  diff  diff2  iproveropt  pipe_iprover.ml.model  plugin_iprover.ml.model
iprover_v0.7_patched/src/: Notes.txt  Solver.C  Vec.h  abstAssignDB.ml  abstAssignDB.mli  abstDB.ml  abstDB.mli  abstMapDB.ml  abstMapDB.mli  bit_vec.ml  bit_vec.mli  clause.ml  clause.mli  clauseAssignDB.ml  clauseDB.ml  clauseDB.mli  config.ml  config.ml.in  config.mli  context.ml  context.mli  discount.ml  discount.mli  discount.ml~  discount_14May.ml  discount_works.ml  discount_works.mli  discrTree.ml  discrTree.mli  discrTree_func.ml  discrTree_func.mli  discrTree_test.ml  dismatching.ml  dismatching.mli  dk_output.ml  dk_output.mli  dkterm.ml  dkterm.mli  dpll.ml  dpll.mli  (+110 more)
launcher/: Makefile  Makefile.in  Makefile.in~  Makefile~  iprover_modulo_launcher.sh  iprover_modulo_launcher.sh.in  main.ml  main.ml.in  main.ml~  starexec_run_CASC
ocaml-4.02.1/: .gitignore
ocaml-4.02.1/byterun/: version.h
